Move paginator to body
For consistency with Boruta.

Additionally test were cleaned-up after disabling pagination.
