# server/operations/artifacts/artifact_lister_parameters.go
@@ -26,9 +26,6 @@ import (
 	"github.com/go-openapi/errors"
 	"github.com/go-openapi/runtime"
 	"github.com/go-openapi/runtime/middleware"
-	"github.com/go-openapi/swag"
-
-	strfmt "github.com/go-openapi/strfmt"
 )
 
 // NewArtifactListerParams creates a new ArtifactListerParams object
@@ -47,26 +44,10 @@ type ArtifactListerParams struct {
 	// HTTP Request Object
 	HTTPRequest *http.Request `json:"-"`
 
-	/*After should be filled with Artifact's ID (don't mix it with JobID)
-	of the last element from current page to receive next one.
-	  In: query
-	*/
-	After *int64
 	/*Artifact Filter and Sort object.
 	  In: body
 	*/
-	ArtifactFilterAndSort ArtifactListerBody
-	/*Before should be filled with Artifact's ID (don't mix it with
-	JobID) of the first element from current page to receive previous
-	one.
-	  In: query
-	*/
-	Before *int64
-	/*Limit is the number of records to return. Overrides default server
-	page limit.
-	  In: query
-	*/
-	Limit *int32
+	ArtifactListBody ArtifactListerBody
 }
 
 // BindRequest both binds and validates a request, it assumes that complex things implement a Validatable(strfmt.Registry) error interface
@@ -78,18 +59,11 @@ func (o *ArtifactListerParams) BindRequest(r *http.Request, route *middleware.Ma
 
 	o.HTTPRequest = r
 
-	qs := runtime.Values(r.URL.Query())
-
-	qAfter, qhkAfter, _ := qs.GetOK("after")
-	if err := o.bindAfter(qAfter, qhkAfter, route.Formats); err != nil {
-		res = append(res, err)
-	}
-
 	if runtime.HasBody(r) {
 		defer r.Body.Close()
 		var body ArtifactListerBody
 		if err := route.Consumer.Consume(r.Body, &body); err != nil {
-			res = append(res, errors.NewParseError("artifactFilterAndSort", "body", "", err))
+			res = append(res, errors.NewParseError("artifactListBody", "body", "", err))
 		} else {
 			// validate body object
 			if err := body.Validate(route.Formats); err != nil {
@@ -97,88 +71,12 @@ func (o *ArtifactListerParams) BindRequest(r *http.Request, route *middleware.Ma
 			}
 
 			if len(res) == 0 {
-				o.ArtifactFilterAndSort = body
+				o.ArtifactListBody = body
 			}
 		}
 	}
-	qBefore, qhkBefore, _ := qs.GetOK("before")
-	if err := o.bindBefore(qBefore, qhkBefore, route.Formats); err != nil {
-		res = append(res, err)
-	}
-
-	qLimit, qhkLimit, _ := qs.GetOK("limit")
-	if err := o.bindLimit(qLimit, qhkLimit, route.Formats); err != nil {
-		res = append(res, err)
-	}
-
 	if len(res) > 0 {
 		return errors.CompositeValidationError(res...)
 	}
-	return nil
-}
-
-// bindAfter binds and validates parameter After from query.
-func (o *ArtifactListerParams) bindAfter(rawData []string, hasKey bool, formats strfmt.Registry) error {
-	var raw string
-	if len(rawData) > 0 {
-		raw = rawData[len(rawData)-1]
-	}
-
-	// Required: false
-	// AllowEmptyValue: false
-	if raw == "" { // empty values pass all other validations
-		return nil
-	}
-
-	value, err := swag.ConvertInt64(raw)
-	if err != nil {
-		return errors.InvalidType("after", "query", "int64", raw)
-	}
-	o.After = &value
-
-	return nil
-}
-
-// bindBefore binds and validates parameter Before from query.
-func (o *ArtifactListerParams) bindBefore(rawData []string, hasKey bool, formats strfmt.Registry) error {
-	var raw string
-	if len(rawData) > 0 {
-		raw = rawData[len(rawData)-1]
-	}
-
-	// Required: false
-	// AllowEmptyValue: false
-	if raw == "" { // empty values pass all other validations
-		return nil
-	}
-
-	value, err := swag.ConvertInt64(raw)
-	if err != nil {
-		return errors.InvalidType("before", "query", "int64", raw)
-	}
-	o.Before = &value
-
-	return nil
-}
-
-// bindLimit binds and validates parameter Limit from query.
-func (o *ArtifactListerParams) bindLimit(rawData []string, hasKey bool, formats strfmt.Registry) error {
-	var raw string
-	if len(rawData) > 0 {
-		raw = rawData[len(rawData)-1]
-	}
-
-	// Required: false
-	// AllowEmptyValue: false
-	if raw == "" { // empty values pass all other validations
-		return nil
-	}
-
-	value, err := swag.ConvertInt32(raw)
-	if err != nil {
-		return errors.InvalidType("limit", "query", "int32", raw)
-	}
-	o.Limit = &value
-
 	return nil
 }
