# swagger.yml
@@ -115,7 +115,7 @@ paths:
         - application/json
       parameters:
         - in: body
-          name: jobFilterAndSort
+          name: JobListBody
           description: Job Filter and Sort object.
           required: false
           schema:
@@ -129,27 +129,8 @@ paths:
                 $ref: '#/definitions/JobFilter'
               Sorter:
                 $ref: '#/definitions/JobSorter'
-        - in: query
-          name: after
-          description: |-
-            After should be filled with JobID of the last element from current
-            page to receive next one.
-          type: integer
-          format: uint64
-        - in: query
-          name: before
-          description: |-
-            Before should be filled with JobID of the first element from
-            current page to receive previous one.
-          type: integer
-          format: uint64
-        - in: query
-          name: limit
-          description: |-
-            Limit is the number of records to return. Overrides default server
-            page limit.
-          type: integer
-          format: int32
+              Paginator:
+                $ref: '#/definitions/Paginator'
       responses:
         '200':
           description: OK
@@ -158,20 +139,6 @@ paths:
             items:
               $ref: '#/definitions/JobInfo'
           headers:
-            Weles-Previous-Page:
-              type: string
-              format: URI
-              description: |-
-                Weles-Previous-Page is the URL suffix to request previous page
-                of data.  Please note that the same body must be used as in
-                initial request.
-            Weles-Next-Page:
-              type: string
-              format: URI
-              description: |-
-                Weles-Next-Page is the URL suffix to request next page of data.
-                Please note that the same body must be used as in initial
-                request.
             Weles-List-Total:
               type: integer
               format: uint64
@@ -200,20 +167,6 @@ paths:
             items:
               $ref: '#/definitions/JobInfo'
           headers:
-            Weles-Previous-Page:
-              type: string
-              format: URI
-              description: |-
-                Weles-Previous-Page is the URL suffix to request previous page
-                of data.  Please note that the same body must be used as in
-                initial request.
-            Weles-Next-Page:
-              type: string
-              format: URI
-              description: |-
-                Weles-Next-Page is the URL suffix to request next page of data.
-                Please note that the same body must be used as in initial
-                request.
             Weles-List-Total:
               type: integer
               format: uint64
@@ -265,7 +218,7 @@ paths:
         - application/json
       parameters:
         - in: body
-          name: artifactFilterAndSort
+          name: ArtifactListBody
           description: Artifact Filter and Sort object.
           required: false
           schema:
@@ -279,28 +232,8 @@ paths:
                 $ref: '#/definitions/ArtifactFilter'
               Sorter:
                 $ref: '#/definitions/ArtifactSorter'
-        - in: query
-          name: after
-          description: |-
-            After should be filled with Artifact's ID (don't mix it with JobID)
-            of the last element from current page to receive next one.
-          type: integer
-          format: int64
-        - in: query
-          name: before
-          description: |-
-            Before should be filled with Artifact's ID (don't mix it with
-            JobID) of the first element from current page to receive previous
-            one.
-          type: integer
-          format: int64
-        - in: query
-          name: limit
-          description: |-
-            Limit is the number of records to return. Overrides default server
-            page limit.
-          type: integer
-          format: int32
+              Paginator:
+                $ref: '#/definitions/Paginator'
       responses:
         '200':
           description: OK
@@ -309,20 +242,6 @@ paths:
             items:
               $ref: '#/definitions/ArtifactInfo'
           headers:
-            Weles-Previous-Page:
-              type: string
-              format: URI
-              description: |-
-                Weles-Previous-Page is the URL suffix to request next page of
-                data.  Please note that the same body must be used as in
-                initial request.
-            Weles-Next-Page:
-              type: string
-              format: URI
-              description: |-
-                Weles-Next-Page is the URL suffix to request next page of data.
-                Please note that the same body must be used as in initial
-                request.
             Weles-List-Total:
               type: integer
               format: uint64
@@ -351,19 +270,6 @@ paths:
             items:
               $ref: '#/definitions/ArtifactInfo'
           headers:
-            Weles-Previous-Page:
-              type: string
-              format: URI
-              description: |-
-                Weles-Previous-Page is URL suffix to request next page of data.
-                Please note that the same body must be used as in initial
-                request.
-            Weles-Next-Page:
-              type: string
-              format: URI
-              description: |-
-                Weles-Next-Page is URL to request next page of data. Please
-                note that the same body must be used as in initial request.
             Weles-List-Total:
               type: integer
               format: uint64
